2005-12-03 00:33  masahino

	* examples/wmhddtemp.rb: no comments

2005-12-03 00:32  masahino

	* docktimer.c: delete unused line

2005-12-03 00:31  masahino

	* dockitem.c, docktext.c: delete  debug messages

2005-12-03 00:30  masahino

	* dockapp_utils.c, dockapp_utils.h: delete unsed codes

2005-12-03 00:29  masahino

	* dockapp.h, dockapp_main.c: add version

2005-10-26 23:56  masahino

	* dockpopup.c: change an argument type of the
	  DockApp::PopUp.add_item

2005-10-26 22:33  masahino

	* examples/wmhddtemp.rb: no comments

2005-10-26 07:37  masahino

	* examples/wmhddtemp.rb: some changes...

2005-10-25 00:27  masahino

	* examples/wmhddtemp.rb: add a new example script

2005-10-20 23:43  masahino

	* examples/kbanner.rb (tags: Release_0_2_1): add new example.
	  display KANJI characters

2005-10-20 23:37  masahino

	* dockapp_utils.c (tags: Release_0_2_1): change posision of
	  tooltips window

2005-10-20 23:34  masahino

	* dockapp_main.c (tags: Release_0_2_1): WMDockApp::openwindow has
	  already become unnecessary.

2005-09-23 14:40  masahino

	* dockapp.h (tags: Release_0_2_1), dockapp_main.c, dockitem.c
	  (tags: Release_0_2_1): bug fix(hide tooltips window)

2005-09-23 11:19  masahino

	* dockapp.h, dockapp_main.c, dockapp_utils.c, dockapp_utils.h
	  (tags: Release_0_2_1), dockitem.c: delete debug messages and
	  warning

2005-09-22 00:32  masahino

	* dockapp.h, dockapp_utils.c, dockapp_utils.h, dockitem.c,
	  docktext.c (tags: Release_0_2_1): position of a tooltips

2005-09-21 01:13  masahino

	* dockapp_utils.c, dockitem.c: create tooltips function

2005-09-19 22:47  masahino

	* dockapp.h, dockapp_main.c, dockapp_utils.c, dockitem.c: add
	  tooltips window(it's a just test version)

2005-09-19 22:46  masahino

	* dockpopup.c (tags: Release_0_2_1): create PopUpText class

2005-09-19 22:45  masahino

	* docktext.c: delete debug message

2005-09-16 10:08  masahino

	* dockapp-doc.ja.rb (tags: Release_0_2_1): add japanese document
